resolved issue 42040 overlapping problem

--- a/plugins/woocommerce-blocks/packages/components/totals/item/style.scss
+++ b/plugins/woocommerce-blocks/packages/components/totals/item/style.scss
@@ -11,7 +11,7 @@
 
 .wc-block-components-totals-item__value {
 	font-weight: bold;
-	white-space: nowrap;
+	white-space: wrap;
 }
 
 .wc-block-components-totals-item__description {
